<resources>
    <string name="repo">middlegear/Saikou</string>
    <string name="preference_file_key" translatable="false">saikouprefs</string>
    <string name="app_name">Saikou</string>
    <string name="slogan">The Best Anime &amp; Manga app for Android.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="discord">https://discord.gg/2T7TunuwFZ</string>
    <string name="telegram">https://telegram.me/saikou_app</string>
    <string name="github">https://github.com/saikou-app/saikou</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="manga">Manga</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="info">Info</string>
    <string name="watch">Watch</string>
    <string name="read">Read</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="sad">X(</string>
    <string name="oh">:o</string>
    <string name="colon">" : "</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string-array name="sort_by">
        <item>Score</item>
        <item>Popular</item>
        <item>Trending</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>What?</item>
    </string-array>
    <string name="genre">Genre</string>
    <string name="top_score">Top Score</string>
    <string name="updated">Recently Updated</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="trending_manga">Trending Manga</string>
    <string name="top_rated_manga">Top Rated</string>
    <string name="popular_manga">Popular Manga</string>
    <string name="username">Username</string>
    <string name="chapters_read">"Chapters Read "</string>
    <string name="episodes_watched">"Episodes Watched "</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>
    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add to List</string>
    <string name="list_editor">List Editor</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="notifications">Notifications</string>
    <string-array name="keys">
        <item>Reading</item>
        <item>Watching</item>
        <item>Completed</item>
        <item>Paused</item>
        <item>Dropped</item>
        <item>Planning</item>
        <item>Favourites</item>
        <item>Rewatching</item>
        <item>Rereading</item>
        <item>All</item>
    </string-array>
    <string-array name="status" translatable="false">
        <item>PLANNING</item>
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>REPEATING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_anime">
        <item>PLANNING</item>
        <item>WATCHING</item>
        <item>COMPLETED</item>
        <item>RE-WATCHING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_manga">
        <item>PLANNING</item>
        <item>READING</item>
        <item>COMPLETED</item>
        <item>RE-READING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string name="progress">PROGRESS</string>
    <string name="score">SCORE</string>
    <string name="score_suffix">" / 10"</string>
    <string name="started_at">STARTED AT</string>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">" min"</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="roles">Roles</string>
    <string name="details">Details</string>
    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="ep">Episode</string>
    <string name="chaps">Chapters</string>
    <string name="chap">Chapter</string>
    <string name="wrong"><u>Wrong Title?</u></string>
    <string name="source_not_found">
        Couldn\'t find anything X( \n
        Try another source.
    </string>
    <string name="not_supported">%1$s is not supported!</string>
    <string name="server_selector">Select Server</string>
    <string name="auto_select_server">Auto Selecting Server</string>
    <string name="make_default">Make Default</string>
    <string name="filler">Filler</string>
    <string name="adult">Adult</string>
    <string name="list_only">List Only</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="synonyms">Synonyms</string>
    <string name="trailer">Trailer</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="anilist_settings">Anilist Settings</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="player_settings">Player Settings</string>
    <string name="recentlyListOnly">Only show My Shows in Recently Updated</string>
    <string name="download_manager_select">Download Manager</string>
    <string name="downloadInSd">Download in SD card</string>
    <string name="noSdFound">No SD card was Found.</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="default_source">Default Source</string>
    <string name="show_yt">Show Youtube Link</string>
    <string name="default_ep_view">Default Episode Layout</string>
    <string name="default_chp_view">Default Chapter Layout</string>
    <string name="ui">User Interface</string>
    <string name="common">Common</string>
    <string name="theme">Theme</string>
    <string name="ui_settings">UI Settings</string>
    <string name="about">About</string>
    <string name="desc">"    Saikou is crafted based on simplistic yet state-of-the-art elegance. It is an Anilist only client, which also lets you stream-download Anime &amp; Manga.\nSaikou literally means the \"best\" in japanese. Well, we would like to say this is the best open source app for anime and manga on Android, what would you say?"</string>
    <string name="devs">Developers</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="full_disclaimer">
         - Saikou only scrapes links from various websites and makes it easier for users to find anime and manga.
        \n\n - Saikou or any of its developer/staff doesn\'t host any of the contents found inside Saikou. Any and all images and anime/manga information found in the app are taken from various public APIs (AniList, MyAnimeList, Kitsu).
        \n\n - Furthermore, all of the anime/manga links found in Saikou are taken from various 3rd party anime hosting websites.
        \n\n - Saikou or it\'s owners aren\'t liable for any misuse of any of the contents found inside or outside of the app and cannot be held accountable for the distribution of any of the contents found inside the app.
        \n\n - By using Saikou, you comply to the fact that the developer of the app is not responsible for any of the contents found in the app; nonetheless they may or may not be from their legitimate sources.
        \n\n - If the internet infringement issues are involved, please contact the source website. The developer does not assume any legal responsibility.
    </string>
    <string name="version_current">Version %1$s</string>
    <string-array name="tips">
        <item>You can Long Click an episode/chapter to Mark it as Read.</item>
        <item>Long Clicking Shows can directly open List Editor.</item>
        <item>There are few more easter eggs hidden in the App.</item>
        <item>Challenge: Go to the very bottom of the Popular Anime &amp; Manga</item>
        <item>Try Long Clicking the Show\'s Title.</item>
        <item>Damn, why are you wasting your Time?</item>
        <item>You can Long Click to copy this Message.</item>
        <item>OMG LOOK! YOU FOUND AN EASTER EGG!?</item>
        <item>You know who else likes this Animation?</item>
        <item>MAL support? bruh.</item>
        <item>Novels? more like NO vels.</item>
        <item>Long Click the logo to check for App Update</item>
    </string-array>
    <string-array name="themes">
        <item>Default</item>
        <item>Theme 1</item>
        <item>Theme 2</item>
        <item>Theme 3</item>
        <item> Theme 4</item>
    </string-array>
    <string name="video">Video</string>
    <string name="video_info">Show Video Info</string>
    <string name="source_info">Show Source Name</string>
    <string name="video_info_info">Shows what the Resolution of the current video playing, useful for <b>\"Multi Quality\"</b> servers.</string>
    <string name="default_quality">Auto Quality Selection</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="torrent_settings_title">TorrServer Settings</string>
    <string name="torrent_server_title">Server</string>
    <string name="torrent_enable_server">P2P Streaming</string>
    <string name="torrent_enable_server_desc">Allow peer-to-peer(torrent) streaming.</string>
    <string name="torrent_profile_title">Preset</string>
    <string name="torrent_profile">Profile</string>
    <string name="torrent_profile_desc">Optimizes peer connections and  memory usage.</string>
    <string name="torrent_profile_default">Balanced</string>
    <string name="torrent_cache_title">Cache</string>
    <string name="torrent_buffer_size">Video Buffer Size</string>
    <string name="torrent_buffer_size_desc">Determines how much video data held in memory.</string>
    <string name="torrent_network_title">Network &amp; Privacy</string>
    <string name="torrent_enable_dht">DHT Protocol</string>
    <string name="torrent_enable_dht_desc">Finds peers without a central tracker.</string>
    <string name="torrent_enable_encryption">Protocol Encryption</string>
    <string name="torrent_enable_encryption_desc">Obfuscates BitTorrent traffic to prevent ISP throttling.</string>
    <string name="torrent_stats_title">Metrics</string>
    <string name="torrent_enable_stats">Enable Statistics</string>
    <string name="torrent_enable_stats_desc">Displays speed and swarm metrics in the player during playback.</string>
    <string name="torrent_back_button_desc">Navigate back</string>
    <string name="torrent_magnet_icon_desc">Magnet icon</string>
    <string name="torrent_profile_icon_desc">Profile icon</string>
    <string name="torrent_storage_icon_desc">Storage icon</string>
</resources>